# minecrust

./: .editorconfig  .gitignore  Cargo.toml  README.md  build.rs
.cargo/: config
benches/: my_benchmark.rs
etc/: capture_settings.cap
src/: block.rs  bvh.rs  camera.rs  chunk.rs  debug.rs  ecs.rs  event_handlers.rs  freetype.rs  game.rs  geometry.rs  gl.rs  lib.rs  octree.rs  render.rs  renderer.rs  square.rs  types.rs  unitcube.rs  utils.rs  vector.rs  vulkan.rs
src/ecs/: components.rs  entity.rs  systems.rs
src/freetype/: library.rs
src/geometry/: aabb.rs  aap.rs  boundingbox.rs  mod.rs  ray.rs  rectangle.rs  square.rs  unitcube.rs
src/gl/: shader.rs
src/render/: draw.rs  mod.rs  shader.rs  state.rs
src/shaders/: crosshair.frag  crosshair.vert  graphics.vert  selection.frag  selection.vert  text.frag  text.vert  triangle.frag  triangle.vert
src/types/: color.rs  f32ext.rs  matrix3fext.rs  matrix4fext.rs  octants.rs  point2fext.rs  point3fext.rs  prelude.rs  text.rs  transform3fext.rs  vector2fext.rs  vector3fext.rs  vector4fext.rs  vertex.rs
src/utils/: f32.rs  mat3f.rs  mat4f.rs  point3f.rs  pt3f.rs  quat4f.rs  quaternion4f.rs  vec3f.rs  vec4f.rs
src/vulkan/: app.rs  buffer.rs  command_buffer.rs  descriptor.rs  error.rs  one_time_command_buffer.rs  text.rs  texture.rs  vertex.rs  vertex_buffer.rs  vertex_input.rs
