[package]
name = "minecrust"
version = "0.1.0"
authors = ["Christopher Fu <chrisf1337@gmail.com>"]
edition = "2018"
build = "build.rs"

[dependencies]
image = "0.20.1"
failure = "0.1.3"
failure_derive = "0.1.3"
nalgebra = "0.16.12"
specs = "0.14.1"
specs-derive = "0.3.0"
num-traits = "0.2.6"
alga = "0.7.2"
ash = "0.26.2"
winit = { git = "https://github.com/tomaka/winit.git" }
byteorder = "1.2.7"
freetype-rs = "0.19.0"
freetype-sys = "0.7.0"
bitflags = "1.0.4"

[dev-dependencies]
rand = "0.6.5"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = "*"
