[package]
name = "minecrust"
version = "0.1.0"
authors = ["Christopher Fu <chrisf1337@gmail.com>"]
edition = "2018"
build = "build.rs"

[dependencies]
image = "0.21.0"
failure = "0.1.5"
failure_derive = "0.1.5"
nalgebra = "0.17.2"
specs = "0.14.3"
specs-derive = "0.4.0"
num-traits = "0.2.6"
alga = "0.8.2"
ash = "0.27.1"
winit = "0.18.1"
byteorder = "1.3.1"
freetype-rs = "0.19.1"
freetype-sys = "0.7.1"
bitflags = "1.0.4"

[dev-dependencies]
rand = "0.6.5"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = "0.3.6"
